--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,8 @@
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "pg": "^8.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
