--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
+    "axios": "^0.23.0",
     "body-parser": "^1.19.0",
     "chai": "^4.3.0",
     "enzyme": "^3.11.0",
     "font-awesome": "^4.7.0",
     "mocha": "^8.3.0",
     "mocha-jsdom": "^2.0.0",
+    "pg": "^8.5.1",
     "react": "^17.0.1",
     "react-addons-update": "^15.6.3",
     "react-dom": "^17.0.1",
@@ -25,8 +27,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "redux-mock-store": "^1.5.4",
-    "web-vitals": "^1.1.0",
-    "pg": "^8.5.1"
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
