--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
-    "axios": "^0.23.0",
+    "axios": "^1.6.7",
     "body-parser": "^1.19.0",
     "chai": "^4.3.0",
     "enzyme": "^3.11.0",
     "font-awesome": "^4.7.0",
-    "mocha": "^8.3.0",
-    "mocha-jsdom": "^2.0.0",
+    "mocha": "^10.3.0",
+    "mocha-jsdom": "^1.2.0",
     "pg": "^8.5.1",
     "react": "^17.0.1",
     "react-addons-update": "^15.6.3",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^5.0.1",
     "redux-mock-store": "^1.5.4",
     "web-vitals": "^1.1.0"
   },
