--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "https://mondocountries.vercel.app/api"
+          "value": "https://mondocountries.vercel.app/"
         },
         {
           "key": "Access-Control-Allow-Methods",
